--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,8 @@ dependencies {
 
     implementation "com.google.accompanist:accompanist-swiperefresh:0.18.0"
 
+    implementation "io.github.vanpra.compose-material-dialogs:color:0.6.0"
+
     // Coroutine Lifecycle Scopes
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
